--- a/frontend/straight/package.json
+++ b/frontend/straight/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-webcam": "^7.2.0",
+    "websocket": "^1.0.35"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
