--- a/frontend/straight/package.json
+++ b/frontend/straight/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-webcam": "^7.2.0",
+    "socket.io-client": "^4.8.0",
     "websocket": "^1.0.35"
   },
   "devDependencies": {
