removed test img file

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/flask,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=flask,python
 
+test_image.jpg
+
 ### Flask ###
 instance/*
 !instance/.gitignore
